[gd_scene load_steps=4 format=3 uid="uid://btld4uamm4t8n"]

[ext_resource type="Script" path="res://Escenes/Scripts/Nobles.gd" id="1_ltm4e"]
[ext_resource type="Texture2D" uid="uid://biniu6ip7nx0f" path="res://Imatges/Enemics/Nobles/spaceShips_002.png" id="2_i40b5"]
[ext_resource type="AudioStream" uid="uid://bxok87yohwqo" path="res://MÃºsica i Efectes de So/So/sfx_zap.ogg" id="3_he57p"]

[node name="Nobles" type="CharacterBody2D"]
script = ExtResource("1_ltm4e")

[node name="Timer" type="Timer" parent="."]

[node name="TimerDisparar" type="Timer" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(169, 177)
polygon = PackedVector2Array(-62, -102, -58, -99, -58, -64.5, -55.9, -61, -53.9, -61, -42, -59.8, -42, -58, -31.7, -50.9, -28, -51.7, -3.8, -75, 3, -75, 3, -72.8, 26.8, -50, 29.5, -50, 34, -50.7, 42.1, -60, 52.5, -60, 56, -62.1, 56, -64, 57, -99, 59, -99, 63, -104, 84, -104, 84, -102, 88, -99, 88, -64.3, 88.4, -63, 98, -59.4, 98, -57.9, 106, -50.9, 106, -30.3, 120, 2.6, 120, 8, 122.2, 37, 120.5, 37, 115.5, 55, 114, 55, 82, 99, 78.6, 99, 69.2, 94.7, 65, 96.4, 65, 98.7, 61, 104, 45, 104, 45, 101, 42.3, 92, 44.8, 92, 47, 87.5, 47, 67, 46.4, 67, 42.6, 48, 45.2, 48, 51, 42.2, 51, 35.5, 48.9, 32, 47.3, 32, 42, 32.8, 20.6, 47, -24, 47, -24, 45.1, -47.1, 31.8, -51, 33.4, -51, 35.1, -51.8, 41.3, -46, 49.4, -46, 59.6, -50, 65.6, -50, 86, -49.4, 86, -45.4, 102, -48.7, 102, -65, 104.3, -65, 101.8, -71.8, 95, -83, 100.1, -83, 96.7, -115, 55.7, -115, 53.3, -122, 36.4, -122, 11.7, -115.5, -12, -114.3, -12, -107, -28.3, -107, -51, -105, -51, -98, -60, -93.5, -60, -90, -62.1, -90, -64, -89, -99, -86.8, -99, -84, -101.8, -84, -104, -62, -104)

[node name="SpaceShips002" type="Sprite2D" parent="."]
position = Vector2(169, 177)
texture = ExtResource("2_i40b5")

[node name="SorollBala" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_he57p")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerDisparar" to="." method="_on_timer_disparar_timeout"]
